@@ -1,0 +1,41 @@
+<?php
+/**
+ * Copyright 2014 Horde LLC (http://www.horde.org/)
+ *
+ * See the enclosed file COPYING for license information (GPL). If you
+ * did not receive this file, see http://www.horde.org/licenses/gpl.
+ *
+ * @author   Jan Schneider <jan@horde.org>
+ * @category Horde
+ * @license  http://www.horde.org/licenses/gpl GPL
+ * @package  Ingo
+ */
+
+/**
+ * Fixes the type of the parents column.
+ *
+ * @author   Jan Schneider <jan@horde.org>
+ * @category Horde
+ * @license  http://www.horde.org/licenses/gpl GPL
+ * @package  Ingo
+ */
+class IngoUpgradeParents extends Horde_Db_Migration_Base
+{
+    /**
+     * Upgrade.
+     */
+    public function up()
+    {
+        $this->changeColumn('ingo_shares', 'share_parents', 'string', array('limit' => 4000));
+        $this->changeColumn('ingo_sharesng', 'share_parents', 'string', array('limit' => 4000));
+    }
+
+    /**
+     * Downgrade
+     */
+    public function down()
+    {
+        $this->changeColumn('ingo_shares', 'share_parents', 'text');
+        $this->changeColumn('ingo_sharesng', 'share_parents', 'text');
+    }
+}
