@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Make shares table compatible with Oracle.
 * [mms] Validate e-mail addresses on the forward and vacation pages (Request #7249).
 * [mms] Add &apos;newEmailFilter&apos; API link.
  </notes>
