@@ -2,6 +2,7 @@
 v3.2.0-git
 ----------
 
+[jan] Make shares table compatible with Oracle.
 [mms] Validate e-mail addresses on the forward and vacation pages (Request
       #7249).
 [mms] Add 'newEmailFilter' API link.
